--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -4,9 +4,4 @@ title: "cv"
 ---
 
 
-<object data="http://yoursite.com/the.pdf" type="application/pdf" width="750px" height="750px">
-    <embed src="http://yoursite.com/the.pdf" type="application/pdf">
-        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="http://yoursite.com/the.pdf">Download PDF</a>.</p>
-    </embed>
-</object>
-
+<object data="../assets/images/rplot4.pdf" width="1000" height="1000" type='application/pdf'></object>
