--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -4,4 +4,4 @@ title: "cv"
 ---
 
 
-<object data="../assets/images/rplot4.pdf" width="1000" height="1000" type='application/pdf'></object>
+<object data="../assets/images/Rplot04.pdf" width="1000" height="1000" type='application/pdf'></object>
