--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,7 +1,2 @@
----
-permalink: /cv/
-title: "cv"
----
 
-
-<object data="../assets/images/Rplot04.pdf" width="1000" height="1000" type='application/pdf'></object>
+<object data="pdoubleday.github.io/assets/images/Rplot04.pdf" width="1000" height="1000" type='application/pdf'></object>
